upgrade to spark 3.5